# analytics

./: README.md
analytics/: .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
analytics/.github/workflows/: ci.yml  release.yml  security.yml
analytics/docs/: api.md  architecture.md  data_contracts.md  evals.md  runbooks.md  slo.md  threat_model.md
analytics/scripts/: dev.ps1  dev.sh  doctor.py  make_eval_set.py  replay_events.py  run_offline_evals.py  seed_demo_data.py
analytics/src/analytics_engine/: main.py  settings.py  telemetry.py
analytics/src/analytics_engine/adapters/: base.py  consensus_adapter.py  global_metrics_adapter.py  registry.py  rss_adapter.py  sandbox_llm_adapter.py  social_adapter.py
analytics/src/analytics_engine/api/: app.py  routes_admin.py  routes_analyze.py  routes_audit.py  routes_ingest.py  routes_tenants.py
analytics/src/analytics_engine/core/: audit_ledger.py  budgets.py  consensus.py  contracts.py  event_bus.py  lineage.py  policy.py  tenancy.py  trust.py
analytics/src/analytics_engine/evals/: golden_tests.py  metrics.py  offline.py
analytics/src/analytics_engine/intelligence/: black_swan.py  causal_graph.py  collapse.py  game_theory.py  hypothesis.py  narrative.py  social.py  truth.py
analytics/src/analytics_engine/jobs/: queue.py  tasks.py
analytics/src/analytics_engine/pipeline/: enrich.py  ingest.py  normalize.py  snapshot.py  validate.py
analytics/src/analytics_engine/security/: auth.py  input_sanitization.py  prompt_injection.py  rate_limit.py
(+18 files in other folders)
